Fixed main page on mobile. (#33)
* Fixed main page on mobile.

* Running prettier.

--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -11,6 +11,13 @@ body {
   background-color: #fafafa;
 }
 
+@media (max-width: 600px) {
+  html,
+  body {
+    position: absolute;
+  }
+}
+
 button {
   font-family: 'Work Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI',
     Roboto, Oxygen, Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans',
